First commit on robotic_arm branch
Integrated robotic arm files

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-functions/
 animations/
 images/
-navigation/func/
-*.asv
+saved_data/
+navgiation/func/
+functions/
 *.mat
+*.asv
 *.csv
-.gitattributes
+*.pptx
+*.ppt
